Little css fix. Event body word wrap.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,9 @@ body {
 .glyphicon.glyphicon-plus {
     font-size: 22px;
 }
+.panel-body  {
+    word-break:break-all
+}
 #hideMe {
 	padding-top: 60px;
 	position: absolute;
